# public_trading

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
scripts/: sp500_by_pe.csv  sp500_pe.py  tickers_list.py
src/: bitwarden.rs  cli_ops.rs  config.rs  creds.rs  lib.rs  main.rs  options.rs  public.rs
src/fixtures/: acc_portfolio_with_orders.json  account_portfolio.json  account_portfolio_with_options.json  accounts.json  get_barsv2_template.json  option_chain.json  public_config.toml
src/public/: config.rs  mod.rs  model.rs  public.rs  tests.rs
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
